--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Pedro Lafosse - Pre Entrega 1</h1>
-        <h3>Para comenzar, utilizá en consola la función efectividadFutbol()</h3>
+        <h3>Para comenzar, utilizá en consola la función solicitarNumero()</h3>
         <p>Te pediremos algunos datos para analizar la efectividad de tu equipo esta temporada.</p>
         <ul>
             <li>Partidos Ganados</li>
