--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Ciclos e Iteraciones</title>
+        <title>Pre Entrega 1</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
         <script defer src="js/funciones.js"></script>
